fix 1px shift when moving cursor in/out of blocks
e.g. numerator of 1/x

--- a/mathquill.css
+++ b/mathquill.css
@@ -66,6 +66,7 @@
   margin-right: -1px;
   position: relative;
   z-index: 1;
+  padding: 0;
 }
 .mathquill-editable .cursor.blink {
   visibility: hidden;
